color countries depending on units in object property black and blue in switch statement

--- a/ironhack_01_project_nba_risk/index.html
+++ b/ironhack_01_project_nba_risk/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Add NBA Favicon -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>NBA Risk</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./Images/Favicon/favicon.ico"
+    />
   </head>
   <body>
     <header class="header">
@@ -36,7 +48,9 @@
     </section>
 
     <section class="display-result">
-      <div class="inner-result">Curry, from way downtown...</div>
+      <div id="inner-result" class="inner-result">
+        Curry, from way downtown...
+      </div>
     </section>
 
     <section class="gameboard">
