--- a/ironhack_01_project_nba_risk/index.html
+++ b/ironhack_01_project_nba_risk/index.html
@@ -534,7 +534,7 @@
         <text id="HI-text" x="400" y="530">Hawaii</text>
         <text id="AK-text" x="180" y="508">Alaska</text>
         <text id="NV-text" x="220" y="235">Nevada</text>
-        <text id="CA-text" x="310" y="275">Utah</text>
+        <text id="UT-text" x="310" y="275">Utah</text>
         <text id="CO-text" x="385" y="285">Colorado</text>
         <text id="NM-text" x="375" y="365">New Mexico</text>
         <text id="AZ-text" x="280" y="375">Arizona</text>
