clean up classnames and replace by id

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
     <section class="control">
       <button class="btn action boost">BOOST</button>
-      <button class="btn action offense">OFFENSE</button>
-      <button class="btn action endturn">END TURN</button>
+      <button id="boost-btn" class="btn action offense">OFFENSE</button>
+      <button id="endturn-btn" class="btn action endturn">END TURN</button>
     </section>
 
     <section class="display-dice">
-      <div class="die attack attack-die-one">?</div>
-      <div class="die attack attack-die-two">?</div>
-      <div class="die attack attack-die-three">?</div>
-      <div class="die defense defense-die-one">?</div>
-      <div class="die defense defense-die-two">?</div>
+      <div id="attack-die-one" class="die attack attack-die-one">?</div>
+      <div id="attack-die-two" class="die attack attack-die-two">?</div>
+      <div id="attack-die-three" class="die attack attack-die-three">?</div>
+      <div id="defense-die-one" class="die defense defense-die-one">?</div>
+      <div id="defense-die-two" class="die defense defense-die-two">?</div>
     </section>
 
     <section class="display-result">
