move test.js to main.js

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </header>
 
     <section class="control">
-      <button class="btn action boost">BOOST</button>
-      <button id="boost-btn" class="btn action offense">OFFENSE</button>
+      <button id="boost-btn" class="btn action boost">BOOST</button>
+      <button id="offense-btn" class="btn action offense">OFFENSE</button>
       <button id="endturn-btn" class="btn action endturn">END TURN</button>
     </section>
 
@@ -775,6 +775,6 @@
     </section>
 
     <!-- JS -->
-    <script src="./test.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
