--- a/index.html
+++ b/index.html
@@ -22,32 +22,55 @@
   </head>
   <body>
     <header class="header">
-      <h1>NBA Regular Season 2022</h1>
-      <h1>
+      <h1 class="warriorscolway">NBA Regular Season 2022</h1>
+      <h1 class="warriorscolway">
         <img src="./Images/Icons/gsw-logo.png" alt="warriors logo" />
         GSW vs. BKN
-        <img src="./Images/Icons/brooklyn_logo.png" alt="" />
+        <img src="./Images/Icons/brooklyn_logo.png" alt="nets logo" />
       </h1>
     </header>
 
     <section class="control">
-      <button id="boost-btn" class="btn action boost">BOOST</button>
-      <button id="offense-btn" class="btn action offense">OFFENSE</button>
-      <button id="endturn-btn" class="btn action endturn">END TURN</button>
+      <button id="boost-btn" class="btn action boost warriorscolway">
+        BOOST
+      </button>
+      <button id="offense-btn" class="btn action offense warriorscolway">
+        OFFENSE
+      </button>
+      <button id="endturn-btn" class="btn action endturn warriorscolway">
+        END TURN
+      </button>
     </section>
 
     <section class="display-dice">
-      <div id="attack-die-one" class="die attack attack-die-one">?</div>
-      <div id="attack-die-two" class="die attack attack-die-two">?</div>
-      <div id="attack-die-three" class="die attack attack-die-three">?</div>
-      <div id="defense-die-one" class="die defense defense-die-one">?</div>
-      <div id="defense-die-two" class="die defense defense-die-two">?</div>
+      <div id="attack-die-one" class="die attack attack-die-one warriorscolway">
+        ?
+      </div>
+      <div id="attack-die-two" class="die attack attack-die-two warriorscolway">
+        ?
+      </div>
+      <div
+        id="attack-die-three"
+        class="die attack attack-die-three warriorscolway"
+      >
+        ?
+      </div>
+      <div
+        id="defense-die-one"
+        class="die defense defense-die-one warriorscolway"
+      >
+        ?
+      </div>
+      <div
+        id="defense-die-two"
+        class="die defense defense-die-two warriorscolway"
+      >
+        ?
+      </div>
     </section>
 
     <section class="display-result">
-      <div id="inner-result" class="inner-result">
-        Curry, from way downtown...
-      </div>
+      <div id="inner-result" class="inner-result warriorscolway">INFO</div>
     </section>
 
     <section class="gameboard">
