colorway change on endturn button

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="warriorscolway">NBA Regular Season 2022</h1>
-      <h1 class="warriorscolway">
+      <h1 class="warriorscolway colorway">NBA Regular Season 2022</h1>
+      <h1 class="warriorscolway colorway">
         <img src="./Images/Icons/gsw-logo.png" alt="warriors logo" />
         GSW vs. BKN
         <img src="./Images/Icons/brooklyn_logo.png" alt="nets logo" />
@@ -31,46 +31,60 @@
     </header>
 
     <section class="control">
-      <button id="boost-btn" class="btn action boost warriorscolway">
+      <button id="boost-btn" class="btn action boost warriorscolway colorway">
         BOOST
       </button>
-      <button id="offense-btn" class="btn action offense warriorscolway">
+      <button
+        id="offense-btn"
+        class="btn action offense warriorscolway colorway"
+      >
         OFFENSE
       </button>
-      <button id="endturn-btn" class="btn action endturn warriorscolway">
+      <button
+        id="endturn-btn"
+        class="btn action endturn warriorscolway colorway"
+      >
         END TURN
       </button>
     </section>
 
     <section class="display-dice">
-      <div id="attack-die-one" class="die attack attack-die-one warriorscolway">
+      <div
+        id="attack-die-one"
+        class="die attack attack-die-one warriorscolway colorway"
+      >
         ?
       </div>
-      <div id="attack-die-two" class="die attack attack-die-two warriorscolway">
+      <div
+        id="attack-die-two"
+        class="die attack attack-die-two warriorscolway colorway"
+      >
         ?
       </div>
       <div
         id="attack-die-three"
-        class="die attack attack-die-three warriorscolway"
+        class="die attack attack-die-three warriorscolway colorway"
       >
         ?
       </div>
       <div
         id="defense-die-one"
-        class="die defense defense-die-one warriorscolway"
+        class="die defense defense-die-one warriorscolway colorway"
       >
         ?
       </div>
       <div
         id="defense-die-two"
-        class="die defense defense-die-two warriorscolway"
+        class="die defense defense-die-two warriorscolway colorway"
       >
         ?
       </div>
     </section>
 
     <section class="display-result">
-      <div id="inner-result" class="inner-result warriorscolway">INFO</div>
+      <div id="inner-result" class="inner-result warriorscolway colorway">
+        INFO
+      </div>
     </section>
 
     <section class="gameboard">
