--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <div id="inner-result" class="inner-result warriorscolway colorway">
         INFO
       </div>
+      <div id="confirm-btn" class="inactive">CONFIRM</div>
     </section>
 
     <section class="gameboard">
