add start new game link

--- a/game.html
+++ b/game.html
@@ -23,6 +23,7 @@
   <body id="body">
     <header id="header" class="header">
       <h1 id="gameover" class="warriorscolway colorway">
+      <h1 id="gameover" class="warriorscolway colorway">
         NBA Regular Season 2022
       </h1>
       <img id="gameover-img" />
@@ -813,6 +814,10 @@
           y="275"
         ></image>
       </svg>
+    </section>
+
+    <section class="newgame">
+      <a href="./index.html">START NEW GAME</a>
     </section>
 
     <!-- JS -->
