--- a/warriorswin.html
+++ b/warriorswin.html
@@ -816,6 +816,10 @@
       </svg>
     </section>
 
+        <section class="newgame">
+      <a href="./index.html">START NEW GAME</a>
+    </section>
+
     <!-- JS -->
     <script src="./warriorswin.js"></script>
   </body>
